评论区模块基本完成,文档部分错误修正,配置项bug修复
