# src/modules/comment/dtos/create-comment.response.ts
@@ -1,0 +1,1 @@
+export class CreateCommentResponseDto {}
