# src/modules/comment/dtos/delete-comment.response.ts
@@ -1,0 +1,1 @@
+export class DeleteCommentsResponseDto {}
